# agent-server

./: .env.example  .flake8  .gitignore  Makefile  README.MD  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/adapter/inbound/middleware/: __init__.py  jwt_bearer.py  jwt_middleware.py
app/adapter/inbound/web/: __init__.py
app/adapter/inbound/web/ai/: __init__.py  ai_model.py  ai_router.py
app/adapter/inbound/web/auth/: __init__.py  auth_api.py  login_response.py  signup_request.py  signup_response.py
app/adapter/outbound/persistence/auth/: __init__.py  auth_adapter.py  auth_repository.py
app/adapter/outbound/persistence/refresh_token/: __init__.py  refresh_token_repository.py
app/adapter/outbound/persistence/user/: __init__.py  user_adapter.py  user_mapper.py  user_repository.py
app/application/port/inbound/: base_command.py
app/application/port/inbound/auth/: __init__.py  login_command.py  login_use_case.py  signup_command.py  signup_use_case.py
app/application/port/inbound/user/: __init__.py  get_user_command.py
app/application/port/outbound/auth/: __init__.py  login_port.py  signup_port.py
app/application/service/auth/: auth_service.py
app/application/service/user/: user_service.py
app/configurator/: __init__.py  config.py  containers.py
app/configurator/db/: __init__.py
app/configurator/logger/: __init__.py  logging_config.json
app/domain/ai/code_convert/: __init__.py  code_convert.py
app/domain/auth/: __init__.py  jwt_token.py
app/domain/user/: user.py
prisma/: schema.prisma
(+38 files in other folders)
