[tool.poetry]
name = "agent-server"
version = "0.1.0"
description = ""
authors = ["JHoo0118 <kik3078@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
prisma = "^0.15.0"
dependency-injector = "^4.44.0"
loguru = "^0.7.3"
isort = "^5.13.2"
python-multipart = "^0.0.20"
argon2-cffi = "^23.1.0"
python-jose = "^3.3.0"
email-validator = "^2.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip = [".gitignore"]